--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "fm-challenge-react",
+  "homepage": "https://github.io/Uzmakh/fm-challenge-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://github.i0/Uzmakh/fm-challenge-react.git",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-     "predeploy": "npm run build",
-   "deploy": "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
+    "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
